TestResults/mysite/mysite/static/style.css
body {
    background-color: rgb(255,243,242);
}

h1 {
    color: navy;
    margin-left: 20px;
}

table {
	border-collapse: collapse;
}

table tr td {
	border-style: solid;
	border-width: 1px;
	border-color: rgb(255, 255, 255);
}

div.column {
	color: #3a0088;
	text-align: center;
	padding: 10px;
	font-size: 15px;
}

td.column {
	background-color: rgb(192, 255, 62);
}

td.content {

}

div.content_pass {
	font-size: 14px;
	text-align: center;
	color: #557700;
}

div.content_failure {
	font-size: 13px;
	text-align: left;
	color: rgb(230, 99, 71);
	overflow: auto;
	overflow-x: hidden;
	margin:3px;
    height:70px;
}

tr.content_column td.column div.column {
	width:150px;
    height:70px;
    text-align: center;
    overflow: auto;
	overflow-x: hidden;
	overflow-y: hidden;
	word-break:break-all;
}

tr.content_column td.column div.column div.title{
    text-align: left;
    overflow: auto;
	overflow-x: hidden;
	overflow-y: hidden;
	word-break:break-all;
	font-weight:bold;
}

tr.content_column td.column div.column div.git_author{
	font-weight:bold;
	font-size: 18px;
}

table.devices tr td.column_titles {
	width:180px;
	background-color: rgb(192, 255, 62);
	border-style: solid;
	border-width: 1px;
	border-color: rgb(255, 255, 255);
	overflow: auto;
	text-align: center;
	font-size: 18px;
}

table.devices tr td.column_values {
	width:180px;
	word-break:break-all;
	text-align: center;
	font-size: 13px;
}

div.para_title {
	font-size: 22px;
	margin: 15px;
	color: rgb(0,0,255);
}

td.column_threshold {
	background-color: rgb(192, 255, 62);
}

td.column_threshold  div.column{
	font-size: 14px;
	text-align: left;
}

ul.branch_nav li {
	display: inline;
	margin-left: 20px
}

div.branch_name {
	text-align: center;
}

